--- a/实现 call、apply、bind/index.html
+++ b/实现 call、apply、bind/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   
-  <script src="call 函数的实现.js"></script>
+  <!-- <script src="call 函数的实现.js"></script> -->
+  <script src="apply 函数的实现.js"></script>
 </body>
 </html>
