--- a/实现 call、apply、bind/index.html
+++ b/实现 call、apply、bind/index.html
@@ -9,6 +9,7 @@
 <body>
   
   <!-- <script src="call 函数的实现.js"></script> -->
-  <script src="apply 函数的实现.js"></script>
+  <!-- <script src="apply 函数的实现.js"></script> -->
+  <script src="bind 函数的实现.js"></script>
 </body>
 </html>
