--- a/防抖节流深拷贝/throttle.html
+++ b/防抖节流深拷贝/throttle.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <input type="text">
-  <button id="cancel">取消</button>
 
   <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.3/underscore-umd-min.js"></script>
+  <script src="throttle.js"></script>
   <script>
     const inputEl = document.querySelector('input')
     inputEl.focus()
@@ -23,11 +23,9 @@
 
     // inputEl.oninput = handleInputChange
 
-    // 防抖处理
-    inputEl.oninput = _.debounce(handleInputChange, 2000)
-
     // 节流处理
     // inputEl.oninput = _.throttle(handleInputChange, 2000)
+    inputEl.oninput = throttle(handleInputChange, 2000)
   </script>
 </body>
 </html>
