--- a/防抖节流深拷贝/throttle.html
+++ b/防抖节流深拷贝/throttle.html
@@ -25,7 +25,8 @@
 
     // 节流处理
     // inputEl.oninput = _.throttle(handleInputChange, 2000)
-    inputEl.oninput = throttle(handleInputChange, 2000)
+    // leading: 设置是否一开始就触发响应函数
+    inputEl.oninput = throttle(handleInputChange, 2000, { leading: false })
   </script>
 </body>
 </html>
