feat(throttle): 节流函数添加获取返回值的功能_通过 Promise 实现

--- a/防抖节流深拷贝/throttle.html
+++ b/防抖节流深拷贝/throttle.html
@@ -32,10 +32,15 @@
       leading: false,
       trailing: true,
       resultCallback: (res) => {
-        console.log('res:', res);
+        console.log('resultCallback 的结果:', res);
       }
     })
-    inputEl.oninput = handleInputChangeThrottled
+    const tempCallback = () => {
+      handleInputChangeThrottled().then(res => {
+        console.log('Promise 的结果：', res);
+      })
+    }
+    inputEl.oninput = tempCallback
 
     // 取消操作
     const cancelBtn = document.querySelector('#cancel')
