fix(throttle): 修复调用时的 this 和参数问题

--- a/防抖节流深拷贝/throttle.html
+++ b/防抖节流深拷贝/throttle.html
@@ -35,8 +35,8 @@
         console.log('resultCallback 的结果:', res);
       }
     })
-    const tempCallback = () => {
-      handleInputChangeThrottled().then(res => {
+    const tempCallback = (...args) => {
+      handleInputChangeThrottled.apply(inputEl, args).then(res => {
         console.log('Promise 的结果：', res);
       })
     }
